# WildFiOpenSource

./: .gitignore  LICENSE  README.md
AndroidApp/ESP32DataDownloader/: settings.gradle
Decoder/WildFiDecoderStandalone/: .gitignore  WildFiDecoderConfig.txt  WildFiDecoderStandaloneV72.ini  WildFiDecoderStandaloneV72_64.ini  config.txt
ESP32CAMGateway/: README.md
ESP32CAMGateway/ESP32WildFiGatewayFirmware/: ESP32WildFiGatewayFirmware.ino  config.txt  configProx.txt
ESP32CAMGateway/ESP32WildFiGatewayOnlineFirmware/: ESP32WildFiGatewayOnlineFirmware.ino  WifiCredentials.h  configMove.txt  configProx.txt
ESP32CAMGateway/ESP32WildFiGatewayShowNearbyOnly/: ESP32WildFiGatewayShowNearbyOnly.ino
ESP32CAMGateway/ESP32WildFiRSSISniffer/: ESP32WildFiRSSISniffer.ino  WifiCredentials.h
Firmware/: ESPIDFHowTo.txt
Firmware/hdLoggerREV6_Development/: 00_compileNoFullClean.bat  (+7 more)
Firmware/proxLoggerREV6_Development/main/: CMakeLists.txt  config.cpp  config.h  configDevelopment.h  definesForProximity.h  main.cpp  passwords.h
Hardware/: WildFiTagREV6-ADP191.brd  WildFiTagREV6-ADP191.sch  WildFiTagREV6-Extension-Dummy.brd  WildFiTagREV6-Extension-Dummy.sch  WildFiTagREV6-Extension-GPS-L70-V3.brd  WildFiTagREV6-Extension-GPS-L70-V3.sch  WildFiTagREV6-Extension-GPS-L70-V4.brd  WildFiTagREV6-Extension-GPS-L70-V4.sch  WildFiTagREV6-Extension-USB.brd  WildFiTagREV6-Extension-USB.sch  WildFiTagREV6-Extension-Wire.brd  WildFiTagREV6-Extension-Wire.sch  WildFiTagREV6-Mic.brd  WildFiTagREV6-Mic.sch  WildFiTagREV6.brd  WildFiTagREV6.sch
Software/: StateMachine_firmwareHdLogger.drawio
(+340 files in other folders)
